# antsim

./: README.md  fdtd.py  grid1D.py  requirements.txt  setup.cfg  sources.py  test.py  test_2D.py  test_constants.py  test_grid1D.py  withloss.py
.github/: dependabot.yml
antsim/: __init__.py  constants.py  demo_1D.py  fdtd.py  grid1D.py  sources.py
