[metadata]
name = antsim
version = 0.0.1
description = 1D FDTD simulation
long_description = file: README.md
authors = Aaron Parsons, Christian Hellum Bye
author_email = chb@berkeley.edu
license = MIT
url = https://github.com/christianhbye/antsim
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
packages=find:
python_requires = >= 3.6
include_package_data = True
install_requires =
    jupyter
    matplotlib
    numpy
    tqdm

[options.extras_require]
dev =
    black
    flake8
    pytest
    tox

[options.package_data]
* = *.md
